# r1-tauriweb-runtime-v1

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  LICENSE  PHASE6_SUMMARY.md  PHASE7_CHECKLIST.md  README.md  USAGE_GUIDE.md  check_wasm.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.base.ts  vitest.config.ts
.github/workflows/: ci.yml
PROMTS AND SKILL/: .cursorrules  AI_GUIDE.md  DEBUG.md  MIGRATE_APP.md  NEW_APP.md  NEW_APP_SQLITE.md  R1_SKILL.md  SQLITE_MIGRATION.md
apps/cli-test-app/: package.json  package.json.r1-backup
apps/cli-test-app/src/: App.tsx
apps/cli-test-app/src-tauri/: Cargo.toml  Cargo.toml.r1-backup  tauri.conf.json
apps/cli-test-app/src-tauri/src/: lib.rs  main.rs
apps/demo/: index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1773536246639-30514ee47ee72.mjs
apps/demo/src/: App.tsx  index.css  main.tsx  sw.ts
apps/my-sqlite-app/: build.ps1  package.json  vite.config.ts
apps/my-sqlite-app/src/: App.tsx
apps/my-sqlite-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/my-sqlite-app/src-tauri/.cargo/: config.toml
apps/my-sqlite-app/src-tauri/src/: lib.rs  main.rs  wasm_vfs.c
apps/phase6-test-app/: package.json  package.json.r1-backup  vite.config.ts
apps/phase6-test-app/src/: App.css  App.tsx  db.ts
apps/phase6-test-app/src-tauri/: Cargo.toml  Cargo.toml.r1-backup  tauri.conf.json
apps/phase6-test-app/src-tauri/src/: lib.rs  main.rs
apps/r1-notes-e2e/: index.html  package.json  vite.config.ts
apps/r1-notes-e2e/src/: App.tsx  main.tsx
apps/r1-notes-e2e/src-tauri/: Cargo.toml
apps/r1-notes-e2e/src-tauri/src/: lib.rs
apps/tauri-sqlite/: README.md  build.ps1  package.json  vite.config.ts
apps/tauri-sqlite/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-sqlite/src-tauri/.cargo/: config.toml
apps/tauri-sqlite/src-tauri/src/: database.rs  lib.rs  main.rs  state.rs
apps/test-greet/: package.json  vite.config.ts
apps/test-greet/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/test-greet/src-tauri/src/: lib.rs  main.rs
apps/todo-demo/: index.html  package.json  tsconfig.json
apps/todo-demo/src/: App.tsx  main.tsx
apps/todo-demo/src-tauri/: Cargo.toml
apps/todo-demo/src-tauri/src/: lib.rs
roadmap/: Roadmap.md  Sqlite fix roadmap.md  v0.2 roadmap.md  v0.3-ROADMAP.md
templates/r1-macros/: Cargo.toml  README.md
templates/r1-macros/src/: lib.rs
templates/r1-macros/tests/: macro_tests.rs
tests/: cli-sql-import-test.md  cli-test-results.md  phase5-build-verification.md  phase5-macro-test-results.md  phase6-test-results.md  phase6-vibe-analysis.md
tests/fixtures/fixture-app/: index.html  vite.config.ts
tests/fixtures/fixture-app/src/: index.ts
tests/fixtures/rust/sqlite-test/: Cargo.toml
tests/fixtures/rust/sqlite-test/src/: lib.rs
tests/fixtures/rust/test-module/: Cargo.toml
tests/fixtures/rust/test-module/src/: lib.rs  r1.rs
tests/fixtures/wasm/: README.md  sqlite_test.js  sqlite_test.wasm  test-module.js  test-module.wasm  test-module_bg.wasm  test-wasi.wasm
