[package]
name = "r1-macros"
version = "0.3.0"
edition = "2021"
description = "Procedural macros for R1 TauriWeb Runtime"
license = "MIT"
repository = "https://github.com/12errh/r1-tauriweb-runtime-v1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
