[package]
name = "cli-test-app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

[lib]
name = "cli_test_app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[dependencies]
serde_json = "1"
wasm-bindgen = "0.2"

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

["target.'cfg(not(target_arch = \"wasm32\"))'.dependencies"]
tauri-plugin-opener = "2"

  ["target.'cfg(not(target_arch = \"wasm32\"))'.dependencies".tauri]
  version = "2"
  features = [ ]
