[package]
name = "phase6-test-app"
version = "0.1.0"
description = "TaskFlow - Complete R1 Feature Test App"
authors = [ "you" ]
edition = "2021"

[lib]
name = "phase6_test_app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[dependencies]
serde_json = "1"
csv = "1.3"
wasm-bindgen = "0.2"

  [dependencies.r1-macros]
  path = "../../../templates/r1-macros"

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.chrono]
  version = "0.4"
  features = [ "serde" ]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"

  [target."cfg(not(target_arch = \"wasm32\"))".dependencies.tauri]
  version = "2"
  features = [ ]

  [target."cfg(not(target_arch = \"wasm32\"))".dependencies.tauri-plugin-sql]
  version = "2"
  features = [ "sqlite" ]
