[package]
name = "test-greet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "test_greet_lib"
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
